src/ui/snapshots/state/default/pr_selection/work_item_warning_right_button.snap
---
source: src/ui/state/default/pr_selection.rs
assertion_line: 4905
expression: harness.backend()
---
"                                                                                                                        "
" ┌Pull Requests───────────────────────────────────────────────────────────────────────────────────────────────────────┐ "
" │      PR #     Date         Title                         Author            Work Items             PR Dependenc     ↑ "
" │→     100      2024-01-10   Backend fix for login         Alice             #1001 (Active)                          █ "
" │      101      2024-01-11   Frontend fix for login        Bob               #1001 (Active), #1002                   █ "
" │      102      2024-01-12   Auth module refactor          Charlie           #1002 (Active)                          █ "
" │      103      2024-01-13   Independent feature           Diana             #1003 (Active)                          █ "
" │                                                                                                                    █ "
" │                                                                                                                    █ "
" │                                                                                                                    █ "
" │                                                                                                                    █ "
" │                                                                                                                    █ "
" │                  ┌ Work Item Grouping Warning ──────────────────────────────────────────────────┐                  █ "
" │                  │Selecting PR #100: Backend fix for login                                      │                  █ "
" │                  │                                                                              │                  █ "
" │                  │This PR shares work items with other unselected PRs:                          │                  █ "
" │                  │                                                                              │                  █ "
" │                  │  #1001: Fix login button                                                     │                  █ "
" │                  │    └─ PR #101: Frontend fix for login                                        │                  █ "
" │                  │                                                                              │                  █ "
" │                  │                                                                              │                  █ "
" │                  │                                                                              │                  ║ "
" │                  │                                                                              │                  ║ "
" │                  │                                                                              │                  ↓ "
" └──────────────────│                                                                              │──────────────────┘ "
" ┌Work Item (1/1)───│                                                                              │──────────────────┐ "
" │Bug         #1001 │                                                                              │                  │ "
" │● Active          │                                                                              │                  │ "
" └──────────────────│                                                                              │──────────────────┘ "
" ┌History───────────│                                                                              │──────────────────┐ "
" │No history availab│                                                                              │                  │ "
" └──────────────────│                                                                              │──────────────────┘ "
" ┌Reproduction Steps│                                                                              │──────────────────┐ "
" │No reproduction st│                  Select This Only      Select All Related (2)                │                  │ "
" │                  │                                                                              │                  │ "
" │                  │                  ←/→: Switch | Enter: Confirm | Esc: Cancel                  │                  │ "
" │                  └──────────────────────────────────────────────────────────────────────────────┘                  │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" └────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘ "
" ┌Help────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐ "
" │↑/↓: Navigate PRs | ←/→: Navigate Work Items | /: Search | Space: Toggle | Enter: Confirm | p: Open PR | w: Open    │ "
" └────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘ "
"                                                                                                                        "
